--- a/index.html
+++ b/index.html
@@ -89,6 +89,15 @@
         <br>
         <h1><a href="nl.htm" style="font-size: 65px; color:whitesmoke">Nederlands</a></h1>
     </div>
+    <div id="div9">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <h1><a href="gr.htm" style="font-size: 65px; color:whitesmoke">Ελληνικά</a></h1>
+    </div>
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
@@ -96,6 +105,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Castoro&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Alegreya+SC&display=swap');
         @font-face {
           font-family: "Font";
           src: url("dihjauti.bold-webfont.woff");
@@ -122,6 +132,7 @@
         #div6 { background: #860404; color:gold; font-family: 'font'}
         #div7 { background: #ffeeee; color: #7788bb; font-family: 'Russo One';}
         #div8 { background: #7788bb; color: whitesmoke; font-family: "Milkshake";}
+        #div9 { background: #055eb0; color: whitesmoke; font-family: "Alegreya SC";}
     </style>    
 </body>
 </html>
