Add Greek & Esperanto

--- a/index.html
+++ b/index.html
@@ -98,6 +98,17 @@
         <br>
         <h1><a href="gr.htm" style="font-size: 65px; color:whitesmoke">Ελληνικά</a></h1>
     </div>
+    <div id="div10">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <h1><a href="eo.htm" style="font-size: 65px; color:whitesmoke">Esperanto</a></h1>
+    </div>
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
@@ -106,6 +117,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Castoro&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Alegreya+SC&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
         @font-face {
           font-family: "Font";
           src: url("dihjauti.bold-webfont.woff");
@@ -133,6 +145,7 @@
         #div7 { background: #ffeeee; color: #7788bb; font-family: 'Russo One';}
         #div8 { background: #7788bb; color: whitesmoke; font-family: "Milkshake";}
         #div9 { background: #055eb0; color: whitesmoke; font-family: "Alegreya SC";}
+        #div10 { background:#009a00; color: whitesmoke; font-family: "Great Vibes";}
     </style>    
 </body>
 </html>
