--- a/eo.htm
+++ b/eo.htm
@@ -15,11 +15,6 @@
 <body>
       <style>
         @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
-
-        @font-face {
-          font-family: "Allura";
-          src: url("allura-regular-webfont.woff");
-        }
         :root {
             font-family: "Great Vibes";
             background-color: #009a00;
@@ -88,7 +83,6 @@
           });
       </script>
       <h1>How to use this tool?</h1>
-      <h2>Just click on the three little dots, and press (Latin) letters on your keyboard. They will be automatically changed into their Katakana equivalent!</h2>
-      <h2>To add a dot above a letter, just press the Apostrophe. And for three dots, press the apostrophe two times.</h2>
+      <h2>Just click on the three little dots, and press (Latin) letters on your keyboard. They will be automatically changed into their Esperanto equivalent!</h2>
 </body>
 </html>
