--- a/ar.htm
+++ b/ar.htm
@@ -15,8 +15,8 @@
 <body>
       <style>
         @font-face {
-          font-family: "JH Fares Medium";
-          src: url("JHFares-Medium.ttf");
+          font-family: "hijazi";
+          src: url("hijazi.ttf");
         }
         :root {
             font-family: "Amiri";
@@ -26,20 +26,20 @@
         }
         #Title {
             font-size: 65px;
-            font-family: "JH Fares Medium";
+            font-family: "hijazi";
         }
         #input {
             border-radius: 15px;
             background-color:rgb(209, 172, 77);
             color: rgb(19, 19, 19);
-            font-family: "JH Fares Medium";
+            font-family: "hijazi";
             font-size: 45px;
             font-weight: bold;
             border: none;
             border-color: goldenrod;
         }
         span {
-          font-family: "JH Fares Medium";
+          font-family: "hijazi";
           font-weight: bold;
         }
       </style>  
